#11: Add specific exceptions for harvester failures, use loops instead of recursion